--- a/inst/www/style/history.less
+++ b/inst/www/style/history.less
@@ -113,13 +113,13 @@ div.rightPaneSection{
 	overflow-x: hidden;
 
 	&#historySection {
-		@minHeightGraphSection: 300px;
-		height: @minHeightGraphSection;
-		min-height: @minHeightGraphSection;
+		// @minHeightGraphSection: 300px;
+		// height: @minHeightGraphSection;
+		// min-height: @minHeightGraphSection;
 	}
 
 	&#reportSection {
-		max-height: ~"calc(100% - 400px)";		// NOTE: 400px is the height of other elements on the right pane
+		max-height: 250px;
 		min-height: 200px;		
 	}
 }
