--- a/inst/www/style/simpleMainEffect.less
+++ b/inst/www/style/simpleMainEffect.less
@@ -37,12 +37,13 @@ div#overTestingPopup
 	.mxnPanelFont;
 	.mxnShadow(2px, 2px, 5px, 0px, @panelShadowColor);
 	width: 500px;
-	height: 300px;	
+	height: 190px;	
 	position: fixed;
 	top: 50%;
 	left: 50%;
 	transform: translate(-60%, -50%);
-	background-color: @panelBackgroundDefaultColor;
+	background-color: rgb(242, 221, 221);
+	color: #B51E1E;
 	padding: 20px;
 }
 
@@ -66,8 +67,8 @@ ul.overTestingBody
 
 span.overTestingExplanation
 {
-	font-size: 0.8em;
-	display: inline-block;
+	font-size: 0.85em;
+	display: block;
 	margin-left: 20px;
 }
 
@@ -83,5 +84,6 @@ label.overTesting
 	display: block;
     margin-left: 20px;
     line-height: normal;
-    margin-bottom: 2em;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
 }
